1.1.2 to 1.1.3
----------------------------------------------------------------------
- When new services are discovered via a rescan, they were not being
  polled until OpenNMS was restarted. This is now fixed.
- Fixed a Delete Nodes issues with RTC - Bug 797
- Added support to build OpenNMS on FreeBSD. Thx Andrei
- HttpMonitor and HttpsMonitor now use "port" instead of "ports".
  Bug 744
- Modified the DecimalFormat in CategoryUtil from ".000" to "0.000"
  Bug 468
- Added a sort to KSC reports - Thx Craig - Bug 751
- Fixed typos - Thx Volker - Bug 750
- Merge some more changes from the Rackspace branch.
- Made some serious performance enhancements to startup times.
- Added an XML RPC daemon for sending OpenNMS to an external server
- Added some new asset categories for use with notifications and
  polling. Thx Bill A.
- Made some changes to the .spec file to support Fedora
- Updated copyright information in preparation for 1.2.
- Added "maxval" and "minval" options to mibObj definitions in order
  to provide greater configuration for RRDs and to help with counter
  wraps.
- Added APC System Definition for data collection.
- Fixed a null pointer exception with KSC reports.
- Fixed a small bug with SNMP Performance links on interface pages.

1.1.1 to 1.1.2
----------------------------------------------------------------------
- Fixed issues in events when nodes are deleted. Bug 708
- Fixed issues with null issnmpprimary values. Bug 741
- Added the ScriptD daemon for running BeanShell scripts. Thx Jim
- Set caspd not to reset the parentId on a rescan (useful for maps)
- Fixed a bug that caused certain rules to match all. Bug 752
- Fixed Plugins and Monitors to explicitly close sockets
- Added an ORDER BY statement to correct issues with RTC not 
  reflecting the problem number of down services.
- Added a small fix to the HTTP and HTTPS monitors that could cause
  a ClassCastException, marking the polled service as down. Thx Jim